--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,7 @@ default_category: uncategorized
 category_map:
   网站: websites
   书声: boosayy
+  道: dao
 tag_map:
   书声: boosayy
 # Date / Time format
